[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/NinePatchPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchPanel" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -57.0
margin_right = 83.0
margin_bottom = 57.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 9.0
margin_right = -10.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchPanel/MarginContainer"]
margin_right = 144.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="NinePatchPanel/MarginContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
text = "Resume"

[node name="OptionsButton2" type="Button" parent="NinePatchPanel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 144.0
margin_bottom = 44.0
text = "Options"

[node name="SaveButton" type="Button" parent="NinePatchPanel/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
text = "Save"

[node name="QuitButton" type="Button" parent="NinePatchPanel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 144.0
margin_bottom = 92.0
text = "Quit"
[connection signal="pressed" from="NinePatchPanel/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="NinePatchPanel/MarginContainer/VBoxContainer/OptionsButton2" to="." method="_on_OptionsButton2_pressed"]
[connection signal="pressed" from="NinePatchPanel/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="NinePatchPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
